--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <header class="page-header">
 		<div class="container">
-      моя почта для связи: 	lucky23man23@gmail.com
+      моя почта: lucky23man23@gmail.com
 		</div>
     </header>
 
     <section class="hero-image">
 		<div class="container">
       <h1 class="heading">Абрамчук Дмитрий Сергеевич</h1>
-      <p>Junior верстальщик</p>
+      <p>Junior верстальщик.</p>
 		</div>
     </section>
 
@@ -45,7 +45,7 @@
 
     <footer class="page-footer">
 		<div class="container">
-      моя почта для связи: 	lucky23man23@gmail.com
+      моя почта: lucky23man23@gmail.com
 		</div>
     </footer>
   </body>
